# teste-intuitive

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
1-TesteWebScrapping/: scrapper.py
2- TesteTransformacaoDados/: transformation.py
2- TesteTransformacaoDados/pdf_to_csv/: transformed_csv.csv
3-TesteCriacaoBD/: query_analiticas.sql  query_criacao.sql
4-TesteAPI/: colecao_postman.json  index.html  main.py
